--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,10 +1,14 @@
 ---
 title: "Reproducible Research: Peer Assessment 1"
+author: Mike B
+date: "2025-11-03"
 output: 
   html_document:
     keep_md: true
 ---
-
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
 
 ## Loading and preprocessing the data
 
